--- a/index.html
+++ b/index.html
@@ -77,32 +77,25 @@
     <section id="features" class="features section">
         <div class="container">            
             <div class="row">
-                <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
+                <div class="item col-md-6 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
-                        <i class="fa fa-cubes"></i>                
+                        <i class="fa fa-cogs"></i>                
                     </div><!--//icon-->
                     <div class="content">
                         <h3 class="title">The I2Pd Project</h3>
                         <p>The I2Pd project is a C++ version of the I2P router currently under development.</p>  
                     </div><!--//content-->               
                 </div><!--//item-->
-                <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
-                    <div class="icon">
-                        <i class="fa fa-comments"></i>                
-                    </div><!--//icon-->
-                    <div class="content">
-                        <h3 class="title">The Abscond browser bundle</h3>
-                        <p>The Abscond browser bundle is a </p>   
-                    </div><!--//content-->               
-                </div><!--//item-->
-                <div class="item col-md-4 col-sm-6 col-xs-12 text-center">
+                <div class="item col-md-6 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
                         <i class="fa fa-globe"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">App Feature Three</h3>
-                        <p>Outline an app feature here. You can change the icon above to any of the 300+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwsome icons</a> available. </p>   
+                        <h3 class="title">The Abscond browser bundle</h3>
+                        <p>The Abscond browser bundle is a fork of TBB with continued development for support for access to both I2P and Tor.</p>   
                     </div><!--//content-->               
+                </div><!--//item-->
+     
                 </div><!--//item-->
             </div><!--//row-->
         </div><!--//container-->
@@ -158,16 +151,13 @@
                     <div class="row">
                         <fieldset>
                             <legend>Coin donations</legend>
-                        <p>Donate for the I2Pd development (BTC) <b>12PdbvjWCuAuMg2ZkFiDWRTRkTt4wDy1Gs</b>
-                                    or the Abscond development <b>1ABscnDt3GhArDKjLGGDoiHPazQ6tReK1K</b></p>
+                        <p>Help us with developing by donating Bitcoin (BTC) <b>12PdbvjWCuAuMg2ZkFiDWRTRkTt4wDy1Gs</b></p>
 
-                        <p>Donate for the I2Pd development (LTC) <b>Li2Pd3TaYX4MtMEk3kRyUzJos66xfHFVxx</b>
-                                    or the Abscond development <b>LaBSCNdkToSL9WFmN4BMixKfhBhzPySh1g</b></p>
+                        <p>Help us with developing by donating Litecoin (LTC) <b>Li2Pd3TaYX4MtMEk3kRyUzJos66xfHFVxx</b></p>
 
-                        <p>Donate for the I2Pd development (ANC) <b>APi2PdyShuPf6waFsMFwKgykUonDAArk5b</b>
-                                    or the Abscond development <b>AbSconDQ7j361ho7kqNcjRYrcqnbef1B3b</b></p>
+                        <p>Help us with developing by donating Anoncoin (ANC) <b>APi2PdyShuPf6waFsMFwKgykUonDAArk5b</b></p>
 
-                        <p>Or donate to our Monero address <b>44UjNH2ZWyjfxS1o9EEkHFMvHS1mgyky48me4uTe1ree4dRVQLVFBo6Uf2ezCEQwSKcJG
+                        <p>Help us with developing by donating Monero (XMR)<b>44UjNH2ZWyjfxS1o9EEkHFMvHS1mgyky48me4uTe1ree4dRVQLVFBo6Uf2ezCEQwSKcJG
                             sbFvjmZDfeEeqaGg4tV5XNHgKm</b></p>
 
                         </fieldset>
@@ -224,37 +214,43 @@
         <div class="container">
             <div class="row text-center">
                 <h2 class="title">Contact US</h2>
-                <div class="intro col-md-6 col-sm-12 col-xs-12 col-md-offset-3">
-                    <p>We’d love to hear from you. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut erat magna. Aliquam porta sem a lacus imperdiet posuere. Integer semper eget ligula id eleifend.</p>
-                    <ul class="list-unstyled contact-details">
-                        <li><i class="fa fa-envelope"></i><a href="mailto:hello@website.com">hello@website.com</a></li>
-                        <li><i class="fa fa-phone-square"></i>0800 123 456</li>
+                <div class="intro ">
+                    <p>Contact details in various forms bellow.</p>
                     </ul>
                 </div>
             </div><!--//row-->
-            <div class="row text-center">
+            <div class="row text-center intro">
                 <div class="contact-form col-md-6 col-sm-12 col-xs-12 col-md-offset-3">                            
-                    <form class="form">                
-                        <div class="form-group name">
-                            <label class="sr-only" for="name">Name</label>
-                            <input id="name" type="text" class="form-control" placeholder="Name:">
-                        </div><!--//form-group-->
-                        <div class="form-group email">
-                            <label class="sr-only" for="email">Email</label>
-                            <input id="email" type="email" class="form-control" placeholder="Email:">
-                        </div><!--//form-group-->
-                        <div class="form-group message">
-                            <label class="sr-only" for="message">Message</label>
-                            <textarea id="message" class="form-control" rows="6" placeholder="Message:"></textarea>
-                        </div><!--//form-group-->
-                        <button type="submit" class="btn btn-lg btn-theme">Send Message</button>
-                    </form><!--//form-->                 
+  
+                    <fieldset>
+                        <legend>Press contact</legend>
+                        <p>For press &amp; PR related, initial contact with mail is prefered.</p>
+                        <ul class="list-unstyled contact-details">
+                            <li><i class="fa fa-envelope"></i><a href="mailto:press@privacysolutions.no">press@privacysolutions.no</a></li>
+                            <li><i class="fa fa-key"></i>Fingerprint = 616B C0B2 D6C6 A756 86E8  82BC E356 8F68 3FD4 4923</li>
+                        </ul>
+                    </fieldset>
+  
+                    <fieldset>
+                        <legend>Security contact</legend>
+                        <p>For security related information or questions, IRC or if it's confidential; initial contact with mail is prefered.</p>
+                        <ul class="list-unstyled contact-details">
+                            <li><i class="fa fa-envelope"></i><a href="mailto:security@privacysolutions.no">security@privacysolutions.no</a></li>
+                            <li><i class="fa fa-key"></i>Fingerprint = 221C 8661 02FD CFA0 6BE3  1B70 188C 0DF6 AD89 7388</li>
+                        </ul>
+                    </fieldset>
+
+                    <fieldset>
+                        <legend>IRC</legend>
+                        <p>We got the channels #i2pd-dev and #Abscond both on Freenode, Nordcloud (Meeh's servers, irc.nordcloud.no SSL port 9999, all privacy features enabled), or Irc2P (The standard IRC network inside I2P)</p>
+                    </fieldset>
+
                 </div><!--//contact-form-->
             </div><!--//row-->
             <div class="text-center">
                  <ul class="social-icons list-inline">
                     <li><a href="https://twitter.com/PSolutions_no" ><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#" ><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.facebook.com/privacysolutions.no" ><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://github.com/PrivacySolutions" ><i class="fa fa-github"></i></a></li>           
                 </ul><!--//social-icons-->
             </div><!--//row-->
@@ -265,10 +261,10 @@
     <footer class="footer">
         <div class="container">
             <small class="copyright pull-left">Copyright &copy; 2014 The Privacy Solutions Project</small>
-            <ul class="links list-inline">
+            <!--<ul class="links list-inline">
                 <li><a href="#">Terms</a></li>
                 <li><a href="#">Privacy</a></li>
-            </ul>
+            </ul>-->
         </div>
     </footer><!--//footer-->
     
