Adding information about the people behind it.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,66 @@
             </div><!--//row-->
         </div><!--//container-->
     </section><!--//how-->
+
+
+    <!-- ******STORY****** --> 
+<section id="story" class="story section has-pattern">
+    <div class="container">
+        <div class="row">
+            <h2 class="title text-center">The people behind it</h2>
+        <div class="item text-center">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>&nbsp;</th>
+                            <th>Title</th>
+                            <th>Name</th>
+                            <th>Mail</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><i class="fa fa-code"></i></td>
+                            <td>Abscond lead/Administration</td>
+                            <td>Mikal Villa ("Meeh")</td>
+                            <td>mikal at thisdomain</td>
+                            <td>Lead developer for the Abscond browser bundle. Active contributer on i2pd.</td>
+                        </tr>
+                        <tr>
+                            <td><i class="fa fa-code"></i></td>
+                            <td>I2Pd lead</td>
+                            <td>orignal</td>
+                            <td>orignal at thisdomain</td>
+                            <td>Lead developer for the i2pd project.</td>
+                        </tr>
+                        <tr>
+                            <td><i class="fa fa-legal"></i></td>
+                            <td>Administration</td>
+                            <td>Riccardo Spagni ("fluffypony")</td>
+                            <td>ric at thisdomain</td>
+                            <td>Keeps track of administrative issues, PR, and law issues.</td>
+                        </tr>
+                        <tr>
+                            <td><i class="fa fa-envelope"></i></td>
+                            <td>Administration</td>
+                            <td>Marielle Osdal</td>
+                            <td>marielle at thisdomain</td>
+                            <td>Keeps track of administrative issues</td>
+                        </tr>
+                        <tr>
+                            <td><i class="fa fa-gear"></i></td>
+                            <td>Advisor/System Administrator</td>
+                            <td>Yves Haenggi ("K1773R")</td>
+                            <td>yves at thisdomain</td>
+                            <td>Advisor and system administrator</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div><!--//container-->
+</section><!--//story-->
     
     <!-- ******FAQ****** --> 
     <section id="faq" class="faq section">
@@ -208,7 +268,7 @@
             </div>
         </div><!--//container-->
     </section><!--//faq-->
-    
+
     <!-- ******CONTACT****** --> 
     <section id="contact" class="contact section has-pattern">
         <div class="container">
