Adding small description.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Home</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#features">What we do</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#how">How to help</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#features">What we do?</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#team">Who are we?</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#how">How to help?</a></li>
                         <li class="nav-item"><a class="scrollto" href="#faq">FAQ</a></li>
                         <li class="nav-item last"><a class="scrollto" href="#contact">Contact</a></li>
                     </ul><!--//nav-->
@@ -66,8 +67,8 @@
             <div class="row">
                 <div class="content col-md-6 col-sm-6 col-xs-12 text-center">
                     <h2 class="title">Who are we, and what do we do?</h2>
-                    <p>Aliquam euismod vehicula lacus, non congue ante pulvinar a. Nunc eu posuere risus, ut condimentum ante. Suspendisse at turpis sollicitudin odio congue lobortis vitae nec nisi. Nullam sodales at libero in lacinia. Nullam vel nibh pulvinar, interdum purus tristique, iaculis turpis. Integer imperdiet tincidunt erat vel gravida. Suspendisse tincidunt orci sed leo euismod, quis ultrices ipsum lobortis. Sed viverra dui et elit accumsan accumsan. Donec lorem turpis, iaculis ac fermentum nec, dignissim sed nisi. Nunc condimentum turpis arcu, eu aliquet lorem eleifend ut. Integer at lorem nec diam elementum convallis vel vel nulla.</p>
-                    <p>Nullam vel nibh pulvinar, interdum purus tristique, iaculis turpis. Integer imperdiet tincidunt erat vel gravida. eleifend ut. Integer at lorem nec diam elementum convallis vel vel nulla.</p>
+                    <p>The Privacy solutions project is a Norwegian registered non-profitt organization that focus on developing privacy tools under open source licenses. Currently we're in the process of starting up and getting organized where we move I2Pd and Abscond browser bundle under the organization for better quality assurance, rather than private one-man projects as it has been until now. This way the projects will have continued development and maintaince. We want to see both I2Pd and Abscond become great products that can help you and others with your rights to be anonymous and speak freely.</p>
+                    <p>At this point you won't find much documentation at this page, but we will add more information, links and texts after we're started up and the organization starts to roll on it's own.</p>
                 </div><!--//content-->
             </div><!--//row-->
         </div><!--//container-->
@@ -82,7 +83,7 @@
                         <i class="fa fa-cogs"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">The I2Pd Project</h3>
+                        <h3 class="title"><a href="https://github.com/PrivacySolutions/i2pd" target="_blank">The I2Pd Project</a></h3>
                         <p>The I2Pd project is a C++ version of the I2P router currently under development.</p>  
                     </div><!--//content-->               
                 </div><!--//item-->
@@ -91,7 +92,7 @@
                         <i class="fa fa-globe"></i>                
                     </div><!--//icon-->
                     <div class="content">
-                        <h3 class="title">The Abscond browser bundle</h3>
+                        <h3 class="title"><a href="https://hideme.today" target="_blank">The Abscond browser bundle</a></h3>
                         <p>The Abscond browser bundle is a fork of TBB with continued development for support for access to both I2P and Tor.</p>   
                     </div><!--//content-->               
                 </div><!--//item-->
@@ -169,8 +170,8 @@
     </section><!--//how-->
 
 
-    <!-- ******STORY****** --> 
-<section id="story" class="story section has-pattern">
+    <!-- ******TEAM****** --> 
+<section id="team" class="story section has-pattern">
     <div class="container">
         <div class="row">
             <h2 class="title text-center">The people behind it</h2>
