Changes in description of possisions.

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <td>Abscond lead/Administration</td>
                             <td>Mikal Villa ("Meeh")</td>
                             <td>mikal at thisdomain</td>
-                            <td>Lead developer for the Abscond browser bundle. Active contributer on i2pd.</td>
+                            <td>Lead for the Abscond BB. PR. Active developer on i2pd. Lead dev for Anoncoin.</td>
                         </tr>
                         <tr>
                             <td><i class="fa fa-code"></i></td>
@@ -206,21 +206,21 @@
                             <td>Administration</td>
                             <td>Riccardo Spagni ("fluffypony")</td>
                             <td>ric at thisdomain</td>
-                            <td>Keeps track of administrative issues, PR, and law issues.</td>
+                            <td>Keeps track of administrative issues, PR, and law. Lead dev for the Monero coin.</td>
                         </tr>
                         <tr>
                             <td><i class="fa fa-envelope"></i></td>
                             <td>Administration</td>
                             <td>Marielle Osdal</td>
                             <td>marielle at thisdomain</td>
-                            <td>Keeps track of administrative issues</td>
+                            <td>Keeps track of administrative issues.</td>
                         </tr>
                         <tr>
                             <td><i class="fa fa-gear"></i></td>
                             <td>Advisor/System Administrator</td>
                             <td>Yves Haenggi ("K1773R")</td>
                             <td>yves at thisdomain</td>
-                            <td>Advisor and system administrator</td>
+                            <td>Advisor and system administrator. Programmer at times.</td>
                         </tr>
                     </tbody>
                 </table>
