Mini update in desc @ team member.

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <td>Administration</td>
                             <td>Marielle Osdal</td>
                             <td>marielle at thisdomain</td>
-                            <td>Keeps track of administrative issues.</td>
+                            <td>Keeps track of administrative issues. PR, Social media.</td>
                         </tr>
                         <tr>
                             <td><i class="fa fa-gear"></i></td>
