Removing QR Code thingy until I've created the images.

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
     </div><!--//container-->
 </section><!--//story-->
-    
+
     <!-- ******HOW****** --> 
     <section id="how" class="how section has-pattern">
         <div class="container">
@@ -170,31 +170,31 @@
                     <h2 class="title">How to help!</h2>
                     <p class="intro">There is lot of ways to contribute, we need programmers as well as donations to keep the fast development process. If you're an developer and want to help, please join either #Abscond or #i2pd-dev on irc.freenode.net and have a chat with us! We will get "how to get going" guides as soon as possible.</p>
                     <div class="qr-codes hidden-sm hidden-xs">
-                        <div class="note">
+             <!--    <div class="note">
                             <p>Scan the QR codes or copy coin addresses</p>
                             <span class="left-arrow"></span>
                             <span class="right-arrow"></span>
-                        </div><!--//note-->
+                        </div>
                         <div class="row">
                             <div class="item col-md-6 col-sm-6">
                                 <img src="assets/images/qrcodes/qr-1.png" alt="" />
                                 <p>Bitcoin</p>
-                            </div><!--//item-->
+                            </div>
                             <div class="item col-md-6 col-sm-6">
                                 <img src="assets/images/qrcodes/qr-1.png" alt="" />
                                 <p>Litecoin</p>
-                            </div><!--//item-->
+                            </div>
                         </div> 
                         <div class="row">
                             <div class="item col-md-6 col-sm-6">
                                 <img src="assets/images/qrcodes/qr-1.png" alt="" />
                                 <p>Anoncoin</p>
-                            </div><!--//item-->
+                            </div>
                             <div class="item col-md-6 col-sm-6">
                                 <img src="assets/images/qrcodes/qr-1.png" alt="" />
                                 <p>Monero</p>
-                            </div><!--//item-->
-                        </div>             
+                            </div>
+                        </div>    -->         
                     </div><!--//qr-codes-->
                 </div><!--//content-->
                 <div id="video-container" class="video-container col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
