--- a/index.html
+++ b/index.html
@@ -207,13 +207,14 @@
                 <div id="video-container" class="video-container col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
                     <div class="row">
                    <fieldset>
-                       <legend>Paypal</legend>
+                   <legend>Paypal or Flatter</legend>
                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="V64UKJLQA9QM2">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/no_NO/i/scr/pixel.gif" width="1" height="1">
 </form>
+<a href="https://flattr.com/profile/meeh" target="_blank">Flatter link</a>
 </fieldset>
 </div>
                     <div class="row">
@@ -225,12 +226,10 @@
 
                         <p>Help us with developing by donating Anoncoin (ANC) <b>APi2PdyShuPf6waFsMFwKgykUonDAArk5b</b></p>
 
-                        <p>Help us with developing by donating Monero (XMR)<b>44UjNH2ZWyjfxS1o9EEkHFMvHS1mgyky48me4uTe1ree4dRVQLVFBo6Uf2ezCEQwSKcJG
-                            sbFvjmZDfeEeqaGg4tV5XNHgKm</b></p>
+                        <p>Help us with developing by donating Monero (XMR)<b>44UjNH2ZWyjfxS1o9EEkHFMvHS1mgyky48me4uTe1ree4dRVQLVFBo6Uf2ezCEQwSKcJGsbFvjmZDfeEeqaGg4tV5XNHgKm</b></p>
 
                         </fieldset>
                     </div>
-
                 </div>
             </div><!--//row-->
         </div><!--//container-->
@@ -277,7 +276,7 @@
                 <a class="btn btn-lg btn-theme scrollto" href="#contact">Get in touch<i class="fa fa-arrow-circle-o-down"></i></a>
             </div>
         </div>
-    </section><!--//faq-->
+    </section>//faq-->
 
     <!-- ******CONTACT****** -->
     <section id="contact" class="contact section has-pattern">
