Added metric service info

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section id="features" class="features section">
         <div class="container">
             <div class="row">
-                <div class="item col-md-4 col-sm-4 col-xs-12 text-center">
+                <div class="item col-xs-6 col-sm-3 text-center">
                     <div class="icon">
                         <i class="fa fa-cogs"></i>
                     </div><!--//icon-->
@@ -87,7 +87,7 @@
                         <p>The I2Pd project is a lightweight C++ version of the I2P router currently under development. We can establish I2P connections and fetch I2P web pages, but it's far from finished or stable/ready-to-use-in-production.</p>
                     </div><!--//content-->
                 </div><!--//item-->
-                <div class="item col-md-4 col-sm-4 col-xs-12 text-center">
+                <div class="item col-xs-6 col-sm-3 text-center">
                     <div class="icon">
                         <i class="fa fa-globe"></i>
                     </div><!--//icon-->
@@ -96,13 +96,22 @@
                         <p>The Abscond browser bundle is a fork of TBB with continued development for support for access to both the I2P and Tor networks. I2P also ships a built-in torrent client which can be found via the Browser.</p>
                     </div><!--//content-->
                 </div><!--//item-->
-                <div class="item col-md-4 col-sm-4 col-xs-12 text-center">
+                <div class="item col-xs-6 col-sm-3 text-center">
                     <div class="icon">
                         <i class="fa fa-signal"></i>
                     </div><!--//icon-->
                     <div class="content">
                         <h3 class="title"><a href="https://geti2p.net/en/about/browser-config#TOS" target="_blank">I2P Outproxy service</a></h3>
                         <p>The Privacy solutions project delivers outproxy service to I2P, and is shipped per default. This is a free service and it's a lot of users versus the bandwidth on the proxy. We will upgrade when possible. Note that we're the only one, so we take a lot of traffic, so your connection will probably work slow.</p>
+                    </div><!--//content-->
+                </div><!--//item-->
+                <div class="item col-xs-6 col-sm-3 text-center">
+                    <div class="icon">
+                        <i class="fa fa-dashboard"></i>
+                    </div><!--//icon-->
+                    <div class="content">
+                        <h3 class="title"><a href="#" target="_blank">Metrics &amp; Statistics</a></h3>
+                        <p>The Privacy solutions project is working on a improved relaunch of the internal project bigbrother.i2p, which is a decentralized statistics system where trusted nodes around the world report routerhashes and country codes in, including successrate on tunnels. No other information is sent.</p>
                     </div><!--//content-->
                 </div><!--//item-->
             </div><!--//row-->
