Blog added/launched.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <li class="nav-item"><a class="scrollto" href="#features">What we do?</a></li>
                         <li class="nav-item"><a class="scrollto" href="#team">Who are we?</a></li>
                         <li class="nav-item"><a class="scrollto" href="#how">How to help?</a></li>
+                        <li class="nav-item"><a target="_blank" href="https://blog.privacysolutions.no/">Blog</a></li>
                         <!--<li class="nav-item"><a class="scrollto" href="#faq">FAQ</a></li>-->
                         <li class="nav-item last"><a class="scrollto" href="#contact">Contact</a></li>
                     </ul><!--//nav-->
