--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1 class="logo pull-left">
                 <a class="scrollto" href="#promo">
                     <img id="logo-image" class="logo-image" src="assets/images/logo/logo.png" alt="Logo">
-                    <span class="logo-title">The privacy solutions project</span>
+                    <span class="logo-title">Privacy Solutions</span>
                 </a>
             </h1><!--//logo-->
             <nav id="main-nav" class="main-nav navbar-right" role="navigation">
