Updating page with link to tracker

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Privacy solutions, I2Pd, The Abscond browser bundle, I2P">
+    <meta name="author" content="Mikal Villa">
     <link rel="shortcut icon" href="favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
@@ -51,10 +51,11 @@
                     <ul class="nav navbar-nav">
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Home</a></li>
                         <li class="nav-item"><a class="scrollto" href="#features">What we do?</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#team">Who are we?</a></li>
                         <li class="nav-item"><a class="scrollto" href="#how">How to help?</a></li>
                         <li class="nav-item"><a target="_blank" href="https://blog.privacysolutions.no/">Blog</a></li>
                         <!--<li class="nav-item"><a class="scrollto" href="#faq">FAQ</a></li>-->
+                        <li class="nav-item"><a target="_blank" href="https://track.privacysolutions.no/">Report bugs</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#team">About</a></li>
                         <li class="nav-item last"><a class="scrollto" href="#contact">Contact</a></li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
