include one more geek

--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@
                             <td>yves at thisdomain</td>
                             <td>Advisor and system administrator. Programmer at times.</td>
                         </tr>
+                        <tr>
+                            <td><i class="fa fa-gear"></i></td>
+                            <td>Advisor / Sysadmin</td>
+                            <td>Andre ("Apekatten")</td>
+                            <td>andre at thisdomain</td>
+                            <td>Advisor, sysadmin, security enthusiast and sometimes developer.</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
