Theme the export regs page

--- a/us_export.html
+++ b/us_export.html
@@ -1,3 +1,63 @@
+<!DOCTYPE html>
+<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
+<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
+<head>
+    <title>Privacy Solutions</title>
+    <!-- Meta -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Privacy solutions, I2Pd, The Abscond browser bundle, I2P">
+    <meta name="author" content="Mikal Villa">
+    <link rel="shortcut icon" href="favicon.ico">
+    <!-- Global CSS -->
+    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+    <!-- Plugins CSS -->
+    <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="assets/plugins/flexslider/flexslider.css">
+    <link rel="stylesheet" href="assets/plugins/animate-css/animate.min.css">
+    <!-- Theme CSS -->
+    <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
+</head>
+
+<body data-spy="scroll">
+    <header id="top" class="header navbar-fixed-top">
+        <div class="container">
+            <h1 class="logo pull-left">
+                <a class="scrollto" href="#promo">
+                    <img id="logo-image" class="logo-image" src="assets/images/logo/logo.png" alt="Logo">
+                    <span class="logo-title">Privacy Solutions</span>
+                </a>
+            </h1><!--//logo-->
+            <nav id="main-nav" class="main-nav navbar-right" role="navigation">
+                <div class="navbar-header">
+                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button><!--//nav-toggle-->
+                </div><!--//navbar-header-->
+                <div class="navbar-collapse collapse" id="navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active nav-item sr-only"><a class="scrollto" href="/#promo">Home</a></li>
+                        <li class="nav-item"><a class="scrollto" href="/#features">What we do?</a></li>
+                        <li class="nav-item"><a class="scrollto" href="/#how">How to help?</a></li>
+                        <li class="nav-item"><a target="_blank" href="https://blog.privacysolutions.no/">Blog</a></li>
+                        <!--<li class="nav-item"><a class="scrollto" href="#faq">FAQ</a></li>-->
+                        <li class="nav-item"><a target="_blank" href="https://track.privacysolutions.no/">Report bugs</a></li>
+                        <li class="nav-item"><a class="scrollto" href="/#team">About</a></li>
+                        <li class="nav-item last"><a class="scrollto" href="/#contact">Contact</a></li>
+                    </ul><!--//nav-->
+                </div><!--//navabr-collapse-->
+            </nav><!--//main-nav-->
+        </div>
+    </header><!--//header-->
+    <br><br>
+    <section class="features section">
+        <div class="container">
+            <div class="row">
 <p>This page provides detailed information on the export control status of the Privacy Solutions Project&#8217;s products, as well as pointers to the open source code from which those products are built.</p>
 <h1 id="exporting">Exporting Privacy Solutions Apps</h1>
 <p>The Privacy Solutions (PS) Project is an open-source project based in Norway. All of our products are developed via online collaboration in public forums and distributed from a central server within Norway. However, our Android applications are additionally distributed on the Google Play store from servers hosted within the U.S. Therefore, U.S. export laws and regulations apply to those distributions and remain in force as products and technology are re-exported to different parties and places around the world. Information on export control classifications and associated restrictions may be required for exporting, re-exporting, record keeping, bundling/embedding of PS products, encryption reporting, and shipping documentation. More information on U.S. Export Regulations can be found at &#8221; <a href="http://www.bis.doc.gov/">http://www.bis.doc.gov/</a> &#8220;.</p>
@@ -14,7 +74,7 @@
 <p>Products classified as <a href="http://www.access.gpo.gov/bis/ear/txt/ccl5-pt2.txt">ECCN 5D002</a> , are exported by PS under the <a href="http://www.access.gpo.gov/bis/ear/txt/740.txt">TSU exception in EAR 740.13(e)</a> , which applies to software containing or designed for use with encryption software that is publicly available as open source. Exception TSU further provides that &#8221; <em>Posting encryption source code and corresponding object code on the Internet (e.g., FTP or World Wide Web site) where it may be downloaded by anyone neither establishes &#8220;knowledge&#8221; of a prohibited export or reexport for purposes of this paragraph, nor triggers any &#8220;red flags&#8221; necessitating the affirmative duty to inquire[...]</em> &#8221; Note that exporters other than PS within the US may or may not be eligible for exception TSU, and it is each specific exporter&#8217;s responsibility to understand and comply with all export regulations applicable within their jurisdiction.</p>
 <p><strong><br />
 </strong></p>
-<table width="100%" border="1">
+<table class="table">
 <tbody>
 <tr>
 <th>Product Name</th>
@@ -47,3 +107,8 @@
 </tbody>
 </table>`
 <p>&nbsp;</p>
+            </div><!--//row-->
+        </div><!--//container-->
+    </section>
+</body>
+</html>
