Updated Bote download location
The I2P-Bote crypto source code will need to be provided here for each release.

--- a/us_export.html
+++ b/us_export.html
@@ -102,7 +102,7 @@
 <tr>
 <td>0.x and later</td>
 <td>5D002</td>
-<td>PS <a href="https://privacysolutions.no/">https://privacysolutions.no/</a></td>
+<td>PS <a href="https://privacysolutions.no/">https://download.i2p2.de/android/bote/</a></td>
 </tr>
 </tbody>
 </table>
