Updated crypto source links

--- a/us_export.html
+++ b/us_export.html
@@ -86,23 +86,23 @@
 <td rowspan="2">I2P Android</td>
 <td>development</td>
 <td>5D002</td>
-<td>I2P <a href="https://github.com/i2p/i2p.i2p/tree/master/core/java/src/net/i2p/crypto">https://github.com/i2p/i2p.i2p/tree/master/core/java/src/net/i2p/crypto</a></td>
+<td><a href="https://github.com/i2p/i2p.i2p/tree/master/core/java/src/net/i2p/crypto">I2P</a></td>
 </tr>
 <tr>
 <td>0.9.10 and later</td>
 <td>5D002</td>
-<td>I2P <a href="https://download.i2p2.de/releases/">https://download.i2p2.de/releases/</a></td>
+<td><a href="https://download.i2p2.de/releases/">I2P</a></td>
 </tr>
 <tr>
 <td rowspan="2">Bote</td>
 <td>development</td>
 <td>5D002</td>
-<td>PS <a href="https://github.com/i2p/i2p.i2p-bote/tree/master/src/main/java/i2p/bote/crypto">https://github.com/i2p/i2p.i2p-bote/tree/master/src/main/java/i2p/bote/crypto</a></td>
+<td><a href="https://github.com/i2p/i2p.i2p-bote/tree/master/src/main/java/i2p/bote/crypto">I2P</a>, <a href="https://www.bouncycastle.org/download/bcprov-jdk16-146.tar.gz">Bouncy Castle</a>, <a href="https://github.com/tbuktu/ntru">Tim Buktu</a>, <a href="https://www.flexiprovider.de/download/new/FlexiProvider-1.7p1_src.zip">FlexiProvider</a>, <a href="https://github.com/wg/scrypt/">lambdaWorks</a></td>
 </tr>
 <tr>
 <td>0.x and later</td>
 <td>5D002</td>
-<td>PS <a href="https://privacysolutions.no/">https://download.i2p2.de/android/bote/</a></td>
+<td><a href="https://github.com/i2p/i2p.i2p-bote/tree/master/src/main/java/i2p/bote/crypto">I2P</a>, <a href="https://www.bouncycastle.org/download/bcprov-jdk16-146.tar.gz">Bouncy Castle</a>, <a href="https://github.com/tbuktu/ntru">Tim Buktu</a>, <a href="https://www.flexiprovider.de/download/new/FlexiProvider-1.7p1_src.zip">FlexiProvider</a>, <a href="https://github.com/wg/scrypt/">lambdaWorks</a></td>
 </tr>
 </tbody>
 </table>
